# Grafana-Automation

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: AUTH.md  PROVISIONING.md
scripts/: backup_dashboards.py
tests/: test_backup.py
