[tool.poetry]
name = "grafana-automation"
version = "0.1.0"
description = "Grafana automation helper scripts"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-mock = "^3.11"
black = "^24.1"
flake8 = "^6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"